# Multigrid-mini-app

./: ndArray.hpp
mg_modules/: CMakeLists.txt
mg_modules/include/: boundary_condition.hpp  mgrid_stack.hpp  multigrid_base.hpp  ndArray.h  transfert_operators.hpp  utilities.hpp
mg_modules/ndarray/: CMakeLists.txt  ndArray.cpp  ndArray.hpp
mg_modules/poisson/: CMakeLists.txt  main.cpp  poisson.cpp  poisson.hpp
mg_modules/src/: CMakeLists.txt  Makefile  cmake_install.cmake  mgrid_stack.cpp  multigrid_base.cpp
src/mg_modules/: Bcondition.hpp  CMakeLists.txt  main_test.cpp  mgrid_stack.hpp  multigrid_base.cpp  multigrid_base.hpp  ndArray.h  ndArray.hpp  test  transfert_operators.hpp  utilities.hpp
src/mg_modules/cmake/: LibFindMacros.cmake
src/mg_modules/poisson/: CMakeLists.txt  main.cpp  poisson.cpp  poisson.hpp
src/mg_modules/poisson/cmake/: FindMULTIGRID.cmake  LibFindMacros.cmake
src/multigrid/: CMakeLists.txt  boundary_condition.hpp  linear_multigrid.hpp  mgrid_stack.cpp  mgrid_stack.hpp  multigrid_base.hpp  transfert_operators.hpp  utilities.hpp
src/multigrid/poisson/: CMakeLists.txt  main.cpp  poisson.hpp
src/multigrid/poisson/cmake/: FindMULTIGRID.cmake
src/tree/: quadtree.hpp
